[package]
name = "hyperqit"
version = "0.1.2"
edition = "2024"
description = "rust sdk for interacting with hyperliquid"
license = "MIT" 


[lib]
name = "hyperqit"
path = "src/lib.rs"

[[bin]]
name = "strat"
path = "src/bin/strategy.rs"

[[bin]]
name = "deployer"
path = "src/bin/perp_deployer.rs"

[dependencies]
alloy = "1.0.9"
anyhow = "1.0.98"
axum = "0.8.4"
env_logger = "0.11.8"
envconfig = "0.11.0"
ethers = "2.0.14"
futures = "0.3.31"
http-body-util = "0.1.3"
httpclient = "0.26.0"
hyper = "1.6.0"
hyper-util = "0.1.13"
log = "0.4.27"
machineid-rs = "1.2.4"
qrcode = "0.14.1"
reqwest = "0.12.19"
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.45.1"
tokio-tungstenite = {version = "0.26.2",features = ["native-tls"] }
tokio-util = "0.7.15"
