[package]
name = "hyperqit"
version = "0.1.5"
edition = "2024"
description = "rust sdk for interacting with hyperliquid"
license = "MIT" 


[lib]
name = "hyperqit"
path = "src/lib.rs"

[[bin]]
name = "strat"
path = "src/bin/dn_strat/main.rs"

[[bin]]
name = "deployer"
path = "src/bin/perp_deployer.rs"

[[bin]]
name = "dex"
path = "src/bin/perp_dex.rs"

[[bin]]
name = "multisig"
path = "src/bin/multi_sig.rs"

[[bin]]
name = "transfer"
path = "src/bin/transfer.rs"

[dependencies]
alloy = "1.0.9"
anyhow = "1.0.98"
async-trait = "0.1.89"
axum = "0.8.4"
env_logger = "0.11.8"
envconfig = "0.11.0"
ethers = "2.0.14"
futures = "0.3.31"
http-body-util = "0.1.3"
httpclient = "0.26.0"
hyper = "1.6.0"
hyper-util = "0.1.13"
log = "0.4.27"
machineid-rs = "1.2.4"
qrcode = "0.14.1"
reqwest = "0.12.19"
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
thiserror = "2.0.12"
tokio = "1.45.1"
tokio-tungstenite = {version = "0.26.2",features = ["native-tls"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["json","env-filter"] }
hl_sol  = { path = "./hl_sol" }

